Update: Added font Outfit and fixed text spacing.

--- a/app/scss/base/_type.scss
+++ b/app/scss/base/_type.scss
@@ -57,3 +57,8 @@
 .font-09 {
   font-family: 'Spectral', serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap');
+.font-10 {
+  font-family: 'Outfit', sans-serif;
+}
