--- a/app/scss/modules/_cards.scss
+++ b/app/scss/modules/_cards.scss
@@ -45,5 +45,5 @@
   margin: 10px auto 10px auto;
   max-width: 50%;
   font-size: 18px;
-  line-height: 10px;
+  line-height: 1.5rem;
 }
